--- a/back/src/Cloud.File.Server/Cloud.File.Server.csproj
+++ b/back/src/Cloud.File.Server/Cloud.File.Server.csproj
@@ -3,6 +3,8 @@
         <PackageReference Include="MessagePack" />
         <PackageReference Include="Swashbuckle.AspNetCore" />
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" />
+        <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" />
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Design">
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
