--- a/back/src/Cloud.File.Server/appsettings.json
+++ b/back/src/Cloud.File.Server/appsettings.json
@@ -14,5 +14,16 @@
     "RootPath": "",
     "UploadSessionTimeoutMinutes": 10,
     "CleanupIntervalMinutes": 1
+  },
+  "Jwt": {
+    "SecretKey": "CHANGE-THIS-TO-A-SECURE-KEY-IN-PRODUCTION-MIN-32-CHARS",
+    "Issuer": "CloudFile",
+    "Audience": "CloudFileClient",
+    "ExpirationMinutes": 1440
+  },
+  "AdminUser": {
+    "Email": "admin@cloudfile.local",
+    "Password": "Admin@123456",
+    "DisplayName": "Administrator"
   }
 }
