--- a/back/Directory.Packages.props
+++ b/back/Directory.Packages.props
@@ -14,5 +14,12 @@
         <!-- Database -->
         <PackageVersion Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
         <PackageVersion Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.4" />
+
+        <!-- Authentication & Identity -->
+        <PackageVersion
+            Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore"
+            Version="9.0.4"
+        />
+        <PackageVersion Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.4" />
     </ItemGroup>
 </Project>
