--- a/back/src/Cloud.File.Server/appsettings.Development.json
+++ b/back/src/Cloud.File.Server/appsettings.Development.json
@@ -7,5 +7,13 @@
   },
   "FileSystem": {
     "RootPath": "./storage"
+  },
+  "Jwt": {
+    "SecretKey": "dev-super-secret-key-for-testing-only-min-32-characters"
+  },
+  "AdminUser": {
+    "Email": "admin@cloudfile.local",
+    "Password": "Admin@123456",
+    "DisplayName": "Administrator"
   }
 }
