--- a/back/src/Cloud.File.Server/appsettings.json
+++ b/back/src/Cloud.File.Server/appsettings.json
@@ -25,5 +25,21 @@
     "Email": "admin@cloudfile.local",
     "Password": "Admin@123456",
     "DisplayName": "Administrator"
+  },
+  "Security": {
+    "CorsOrigins": [],
+    "RateLimiting": {
+      "Enabled": true,
+      "WindowSeconds": 60,
+      "GeneralRequestsPerWindow": 200,
+      "AuthRequestsPerWindow": 10,
+      "UploadRequestsPerWindow": 50
+    },
+    "FileTypeRestrictions": {
+      "MaxFileSizeBytes": 524288000,
+      "UseDefaultBlockedExtensions": true,
+      "BlockedExtensions": [],
+      "AllowedExtensions": []
+    }
   }
 }
