--- a/back/src/Cloud.File.Server/appsettings.Development.json
+++ b/back/src/Cloud.File.Server/appsettings.Development.json
@@ -15,5 +15,16 @@
     "Email": "admin@cloudfile.local",
     "Password": "Admin@123456",
     "DisplayName": "Administrator"
+  },
+  "Security": {
+    "CorsOrigins": [
+      "http://localhost:5173",
+      "http://localhost:5174",
+      "http://127.0.0.1:5173",
+      "http://127.0.0.1:5174"
+    ],
+    "RateLimiting": {
+      "Enabled": false
+    }
   }
 }
