--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,70 @@
 services:
-  postgres:
+  db:
     image: postgres:17-alpine
-    container_name: cloudfile-postgres
-    restart: unless-stopped
+    container_name: cloudfile-db
     environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: cloudfile
-    ports:
-      - '5432:5432'
+      - POSTGRES_DB=cloudfile
+      - POSTGRES_USER=cloudfile
+      - POSTGRES_PASSWORD=${DB_PASSWORD:-cloudfile_secret}
     volumes:
-      - cloudfile-postgres-data:/var/lib/postgresql/data
+      - cloudfile_pg_data:/var/lib/postgresql/data
+    networks:
+      - cloudfile-network
     healthcheck:
-      test: ['CMD-SHELL', 'pg_isready -U postgres -d cloudfile']
+      test: ['CMD-SHELL', 'pg_isready -U cloudfile']
       interval: 10s
       timeout: 5s
       retries: 5
+    restart: unless-stopped
+
+  backend:
+    image: ghcr.io/farid-asgarli/ws-cloud:latest
+    container_name: cloudfile-backend
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Production
+      - ASPNETCORE_URLS=http://+:8080
+    volumes:
+      - ./appsettings.Production.json:/app/appsettings.Production.json:ro
+      - cloudfile_storage:/app/storage
+    ports:
+      - '8084:8080'
+    networks:
+      - cloudfile-network
+    depends_on:
+      db:
+        condition: service_healthy
+    healthcheck:
+      test: ['CMD-SHELL', 'wget --no-verbose --tries=1 --spider http://localhost:8080/health || exit 1']
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
+    restart: unless-stopped
+
+  nginx:
+    image: nginx:1.27-alpine
+    container_name: cloudfile-nginx
+    volumes:
+      - ./nginx/conf.d/default.conf:/etc/nginx/conf.d/default.conf:ro
+    ports:
+      - '8093:80'
+    networks:
+      - cloudfile-network
+    depends_on:
+      - backend
+    healthcheck:
+      test: ['CMD', 'wget', '--quiet', '--tries=1', '--spider', 'http://localhost:80/health']
+      interval: 30s
+      timeout: 10s
+      retries: 3
+    restart: unless-stopped
+
+networks:
+  cloudfile-network:
+    driver: bridge
 
 volumes:
-  cloudfile-postgres-data:
+  cloudfile_pg_data:
+    driver: local
+  cloudfile_storage:
+    driver: local
